--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,21 +14,41 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Check branch name
-        id: check_jira_id
+        id: check_branch_name
         run: |
           BRANCH_NAME="${{ github.head_ref }}"
           echo "Branch name: $BRANCH_NAME"
-          BRANCH_PATTERN='^(develop|master|release/[0-9]{8}|(feature|bugfix|hotfix|release|docs|testaut|chore)/(EVP|RAVE|PS)-[0-9]+(/[a-zA-Z0-9_-]+)?)$'
 
-          # Regex pattern for JIRA ID
-          if [[ $BRANCH_NAME =~ $BRANCH_PATTERN ]]; then
-            echo "Branch name follow the naming convention"
+          # Define patterns for valid branch names
+          DEVELOP_PATTERN="develop"
+          MASTER_PATTERN="master"
+          RELEASE_PATTERN="release/[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9]"
+          FEATURE_PATTERN="feature/*/*-*"  # (Example pattern for JIRA tickets)
+          BUGFIX_PATTERN="bugfix/*/*-*"    # (Same for bugfix)
+          HOTFIX_PATTERN="hotfix/*/*-*"    # (Same for hotfix)
+          RELEASE_TASK_PATTERN="release/*/*-*"  # (For release tasks)
+          DOCS_PATTERN="docs/*/*-*"        # (For documentation)
+          CHORE_PATTERN="chore/*/*-*"      # (For chores or maintenance)
+          TESTAUT_PATTERN="testaut/*/*-*"  # (For test automation)
+          
+          # Check for valid patterns using fnmatch-style matching
+          if [[ "$BRANCH_NAME" == $DEVELOP_PATTERN || 
+                "$BRANCH_NAME" == $MASTER_PATTERN || 
+                "$BRANCH_NAME" == $RELEASE_PATTERN || 
+                "$BRANCH_NAME" == $FEATURE_PATTERN || 
+                "$BRANCH_NAME" == $BUGFIX_PATTERN || 
+                "$BRANCH_NAME" == $HOTFIX_PATTERN || 
+                "$BRANCH_NAME" == $RELEASE_TASK_PATTERN || 
+                "$BRANCH_NAME" == $DOCS_PATTERN || 
+                "$BRANCH_NAME" == $CHORE_PATTERN || 
+                "$BRANCH_NAME" == $TESTAUT_PATTERN ]]; then
+            echo "Branch name follows the naming convention"
           else
             echo "Branch name does not follow the naming convention"
-            echo " EXAMPLES: feature/JIRA-123[/optional-short-description], bugfix/JIRA-123[/optional-short-description] "
-            exit 1;
+            echo "EXAMPLES: feature/JIRA-123[/optional-short-description], bugfix/JIRA-123[/optional-short-description]"
+            exit 1
           fi
 
       - name: Success message
         if: success()
-        run: echo "Branch name follow the naming convention.."
+        run: echo "Branch name follows the naming convention."
