--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           echo "Branch name: $BRANCH_NAME"
 
           # Define patterns for valid branch names
-          DEVELOP_PATTERN="develop"
+          DEVELOP_PATTERN="develop*"  # Match develop, develop-1, etc.
           MASTER_PATTERN="master"
           RELEASE_PATTERN="release/[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9]"
           FEATURE_PATTERN="feature/*/*-*"  # (Example pattern for JIRA tickets)
